# not-qix

./: CMakeLists.txt  README.md  TODO  TODO.md
android/: AndroidManifest.xml
android/res/layout/: main.xml
android/res/values/: strings.xml
assets/: CMakeLists.txt  gensprites.sh  packfonts.sh  packmesh.pl
assets/animations/: level-intro.xml  percent-update.xml  powerup.xml
assets/data/: levels.xml
assets/meshes/: boss.mtl  miniboss.mtl
assets/scripts/: boss.lua  miniboss.lua
assets/shaders/: bitexture-color.frag  bitexture-color.vert  color.frag  color.vert  decal.frag  decal.vert  default.xml  effects.xml  flat.vert  mesh-outline.frag  mesh-outline.vert  mesh.frag  mesh.vert  outline.frag  outline.vert  passthru-filter.frag  passthru-filter.vert  plasticmesh.vert  ripple-filter.frag  screenflash.frag  screenflash.vert  texture-color.frag  texture-color.vert  transition.frag  transition.vert
assets/sprites/: gen-sprites.sh  lives-left-arrow.mvg  lives-left-circle.mvg  player.sh  powerup-inner.mvg  powerup-outer.mvg  powerup.sh
cmake/: FindPhysFS.cmake  mingw-w64.toolchain.cmake
game/: .clang_complete  .syntastic_cpp_config  CMakeLists.txt  action.cc  action.h  app_state.cc  app_state.h  bezier.h  boss.cc  boss.h  common.h  debug_gfx.cc  debug_gfx.h  debuggfx.cc  debuggfx.h  dpad_widget.cc  dpad_widget.h  effect.cc  effect.h  entity.cc  entity.h  explosion.cc  explosion.h  fake3d.cc  fake3d.h  foe.cc  foe.h  game.cc  game.h  game_app.cc  game_app.h  gesture_detector.cc  gesture_detector.h  in_game_state.cc  in_game_state.h  level.cc  level.h  level_selection_state.cc  level_selection_state.h  lives_widget.cc  (+36 more)
ggl/: CMakeLists.txt  action.cc  action.h  align.h  app.h  asset.cc  asset.h  audio_player.h  buffer_object.cc  buffer_object.h  core.cc  core.h  dpad_button.h  event.cc  event.h  file.cc  file.h  font.cc  font.h  framebuffer.cc  framebuffer.h  gl.h  gl_buffer.cc  gl_buffer.h  gl_check.h  gl_program.cc  gl_program.h  gl_shader.cc  gl_shader.h  gl_vertex_array.cc  gl_vertex_array.h  image.cc  image.h  log.h  main.h  mat3.h  mesh.cc  mesh.h  noncopyable.h  panic.cc  (+34 more)
ggl/android/: asset.cc  asset.h  core.cc  core.h  main.h  window.cc  window.h
ggl/sdl/: asset.cc  asset.h  audio_player.cc  audio_player.h  core.cc  core.h  main.h  window.cc  window.h
libpng/: CMakeLists.txt
orig-assets/: bullet.xcf  danger-down.xcf  danger-frame.xcf  danger-up.xcf  laser-flash.xcf  laser-segment.xcf  lives-left-circle.xcf  lives-left-shine.xcf  muzzle-flash.xcf  percent-frame.xcf  powerup-inner.xcf  powerup-outer.xcf
scripts/gimp/: polka-dots.scm
tools/: CMakeLists.txt
tools/packsprites/: .syntastic_cpp_config  CMakeLists.txt  file_writer.cc  file_writer.h  font.cc  font.h  packfont.cc  packsprites.cc  panic.cc  pixmap.cc  pixmap.h  rect.cc  rect.h  rgb.h  sprite.cc  sprite.h  sprite_base.cc  sprite_base.h  sprite_packer.cc  sprite_packer.h
